--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -26,8 +26,13 @@ nav{
     background-color: #080808;
     display: flex;
     align-items: center;
+    width:80%;
     justify-content: space-between;
     flex-wrap: wrap;
+}
+.nav1{
+    position: fixed;
+    background-color: #080808;
 }
 .logo{
     width: 200px;
@@ -217,31 +222,22 @@ nav ul li a:hover::after{
     display: block;
     transition: transform 0.5s;
 }
-.layer{
-    width:100%;
-    height: 0;
-    background: linear-gradient(rgba(0,0,0,0.8), #ff004f);
-    border-radius: 10px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 40px;
-    text-align: center;
-    font-size: 14px;
-    transition: height 0.5s;
-}
+
 .layer h3{
+    margin-top: 30px;
     font-weight: 500;
     margin-bottom: 20px;
+    line-height: 20px;
+}
+.layer p{
+    font-size: 15px;
 }
 .layer #link{
     width: 100%;
     display: inline-block;
+}
+#links{
+    color: white;
 }
 .layer a{
     margin-top: 20px;
@@ -259,21 +255,6 @@ nav ul li a:hover::after{
 }
 .work:hover .layer{
     height: 100%;
-}
-.btn{
-    display: block;
-    width: 100%;
-    margin: 50px auto;
-    width: fit-content;
-    border: 1px solid #ff004f;
-    padding: 14px 50px;
-    border-radius: 6px;
-    text-decoration: none;
-    color: #fff;
-    transition: background 0.5s;
-}    
-.btn:hover{
-    background: #ff004f;
 }
 
 /* -----------calender---------- */
@@ -370,6 +351,10 @@ nav .fas{
     }
     .header-text h1{
         font-size: 30px;
+    }
+    .nav1{
+        width:80%;
+        margin: auto;
     }
     nav .fas{
         display: block;
