--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -33,6 +33,7 @@ nav{
 .nav1{
     position: fixed;
     background-color: #080808;
+    z-index: 2;
 }
 .logo{
     width: 200px;
@@ -222,12 +223,28 @@ nav ul li a:hover::after{
     display: block;
     transition: transform 0.5s;
 }
-
+/* .layer{
+    width:100%;
+    height: 0;
+    background: linear-gradient(rgba(0,0,0,0.8), #ff004f);
+    border-radius: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    text-align: center;
+    font-size: 14px;
+    transition: height 0.5s;
+} */
 .layer h3{
-    margin-top: 30px;
+    margin-top: 20px;
     font-weight: 500;
     margin-bottom: 20px;
-    line-height: 20px;
 }
 .layer p{
     font-size: 15px;
@@ -255,6 +272,21 @@ nav ul li a:hover::after{
 }
 .work:hover .layer{
     height: 100%;
+}
+.btn{
+    display: block;
+    width: 100%;
+    margin: 50px auto;
+    width: fit-content;
+    border: 1px solid #ff004f;
+    padding: 14px 50px;
+    border-radius: 6px;
+    text-decoration: none;
+    color: #fff;
+    transition: background 0.5s;
+}    
+.btn:hover{
+    background: #ff004f;
 }
 
 /* -----------calender---------- */
