--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -67,7 +67,7 @@ nav ul li a:hover::after{
     width: 100%;
 }
 .header-text{
-    margin-top: 20%;
+    margin-top: 22%;
     font-size: 30px;
 }
 .header-text h1{
@@ -77,6 +77,12 @@ nav ul li a:hover::after{
 }
 .header-text h1 span{
     color: #ff004f;
+}
+.hero{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    gap: 20px;
 }
 /* ---------------------about---------------
  */
@@ -224,28 +230,32 @@ nav ul li a:hover::after{
     display: block;
     transition: transform 0.5s;
 }
-/* .layer{
+.layer{
     width:100%;
-    height: 0;
-    background: linear-gradient(rgba(0,0,0,0.8), #ff004f);
+    height: 100%;
+    /* background: #ee0b53; */
     border-radius: 10px;
-    position: absolute;
+    /* position: absolute; */
     left: 0;
     bottom: 0;
     overflow: hidden;
-    display: flex;
-    align-items: center;
+    /* display: flex; */
+    /* align-items: center; */
+    align-content: center;
     justify-content: center;
-    flex-direction: column;
-    padding: 0 40px;
-    text-align: center;
+    /* flex-direction: column; */
+    padding: 0 20px;
+    /* text-align: center; */
     font-size: 14px;
     transition: height 0.5s;
-} */
+}
 .layer h3{
     margin-top: 20px;
     font-weight: 500;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+}
+.layer h4{
+    margin-top: 10px;
 }
 .layer p{
     font-size: 15px;
@@ -256,7 +266,10 @@ nav ul li a:hover::after{
 }
 #links{
     color: white;
+    text-align:justify;
+    align-items: flex-start;
 }
+
 .layer a{
     margin-top: 20px;
     color: #ff004f;
@@ -271,9 +284,9 @@ nav ul li a:hover::after{
 .work:hover img{
     transform: scale(1.1);
 }
-.work:hover .layer{
+/* .work:hover .layer{
     height: 100%;
-}
+} */
 .btn{
     display: block;
     width: 100%;
